# thesis

./: LICENSE
dbpargraph/community/: consolidation.c  consolidation.h  label_propagation.c  label_propagation.h  label_propagation_debug.c  label_propagation_debug.h  test.c
dbpargraph/mlvlpart/: make.sh  makeconf.sh  par_libpq.conf  prepare.sh  run.sh  uncoarsen.sql  upload.sh
dbpargraph/mlvlpart/src/: coarsen.c  export2csv.c  import_from_csv.c  partitions_from_csv.c  uncoarsen.c
mdd/gpu/: ArrayUtils.cpp  CMakeLists.txt  Config.h  DiscordsRun.cpp  DiscordsRun.h  FileUtils.h  Globals.cpp  Globals.h  SAX.cpp  SAX.h  main.cpp
mdd/phi/: ArrayUtils.cpp  ArrayUtils.h  Config.h  DiscordsRun.cpp  DiscordsRun.h  FileUtils.cpp  FileUtils.h  HOTSAX_parallel_alg.cpp  SAX.cpp  discords.cpp  discords.h
pargres/: config.sh  runinis.sh  startdaemons.sh  startpgdaemons.sh  stopdaemons.sh
pargres/src/: Makefile  Makefile.global
pargres/src/backend/: Makefile
pargres/src/timezone/: zic
pbm/: bestmatchparallel-run.cpp  bestmatchparallel.cpp  bestmatchparallel.h  debugger.h  dtw.cpp  dtw.h  envelope.cpp  envelope.h  lb.cpp  lb.h  norm.cpp  norm.h  params.h  profiler.cpp  profiler.h  reader.cpp  reader.h  system.h
pdic/: Makefile  Makefile.Rules
pdic/include/: bitmap.h  debugger.h  dic.h  itemsets.h  params.h  profiler.h  system.h
pdic/src/: Makefile  bitmap.cpp  dic-run.cpp  dic.cpp  itemsets.cpp  mkbitmap.cpp  profiler.cpp
pgfcm/: make.sh  makeconf.sh  pgfcm.c  pgfcm.h  pgfcm_debug.c  pgfcm_debug.h  run.sh  runbutterfly.sh  test-butterfly.c  test-pgfcm.c  upload.sh
(+79 files in other folders)
